--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="tt">Through</div>
         <div class="of">Offset</div>
         <div class="fd">Flip Down</div>
-        <div class="mar">Marquee</div>
+        <div class="mq"><marquee>Marquee</marquee></div>
         <div class="cross">Cross Bar</div>
         <p class="line">Line</p>
 
